wallettemplate: modular build using jlink plugin
* add module-info.java
* wallettemplate/build.gradle: add jlink plugin and mainModule
* gradle.yml: add bitcoinj-wallettemplate:jlink Gradle target
* add instructions to the README